# rules_minidock_tools

./: Cargo.toml  README.md  config.json  manifest.json
.github/workflows/: add_binaries_to_release.yml  build_binaries.sh  test.yml  test_hub.yml
app/: merge_app.rs  parser_app.rs  puller_app.rs  pusher_app.rs
resources/test/sample_out_1/: base_config.json  base_manifest.json  expected_result_config.json  pusher_config.json
src/: lib.rs  merge_config.rs  merge_outputs.rs  registry.rs
src/container_specs/: blob_reference.rs  config.rs  manifest.rs  mod.rs  serde_impl.rs
src/container_specs/docker_types/: config.rs  manifest.rs
src/container_specs/oci_types/: config.rs  manifest.rs  mod.rs
src/docker_types/: config.rs  manifest.rs  mod.rs  pusher_config.rs
src/hash/: mod.rs  sha256_value.rs
src/registry/: mod.rs  ops.rs
src/registry/http/: blob.rs  copy_operations.rs  mod.rs  util.rs
src/registry/http/http_cli/: authentication_flow.rs  mod.rs  private_impl.rs
tests/: test_merge_app.rs
tests/data/: external_merge_config.json  external_merge_config_2.json  file_a_data.tgz  file_b_data.tgz  test_assemble_simple_merger_config_file.json
