[package]
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2021"
license = "Apache-2.0"
name = "rules_minidock_tools"
version = "0.1.0"


[[bin]]
name = "pusher-app"
path = "app/pusher_app.rs"


[[bin]]
name = "puller-app"
path = "app/puller_app.rs"


[[bin]]
name = "merge-app"
path = "app/merge_app.rs"

[dependencies]
anyhow = "1.0.91"
async-recursion = "1.0.5"
async-stream = "0.3.6"
async-trait = "0.1.83"
base64 = "0.21.7"
bytes = "1.4.0"
clap = { version = "4.4.18", features = ["derive", "env"] }
console = "0.15.8"
flate2 = "1.0.34"
futures = "0.3.31"
futures-core = "0.3.30"
http = "0.2.11"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.23.2"
indicatif = { git = "https://github.com/console-rs/indicatif.git", rev = "2ca9d019fbb4b0aed11bfad984daef064998f5ef" }
regex = "1.11.1"
rustls = "0.20.8"
serde = { version = "1.0.210", features = ["derive", "alloc"] }
serde_json = { version = "1.0.132", features = ["alloc"] }
sha2 = "0.10.8"
tempfile = "3.6.0"
thiserror = "1.0.65"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"



[lib]
name = "rules_minidock_tools"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.6.0"
