[package]
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2021"
license = "Apache-2.0"
name = "rules_minidock_tools"
version = "0.1.0"


[[bin]]
name = "pusher-app"
path = "app/pusher_app.rs"


[[bin]]
name = "puller-app"
path = "app/puller_app.rs"


[[bin]]
name = "merge-app"
path = "app/merge_app.rs"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.0.5"
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.21.7"
bytes = "1.8.0"
clap = { version = "4.5.51", features = ["derive", "env"] }
console = "0.15.11"
flate2 = "1.1.5"
zstd = "0.13.0"
futures = "0.3.31"
futures-core = "0.3.30"
http = "0.2.11"
hyper = { version = "1.7.0", features = ["full"] }
hyper-rustls = "0.23.2"
indicatif = { git = "https://github.com/console-rs/indicatif.git", rev = "2ca9d019fbb4b0aed11bfad984daef064998f5ef" }
regex = "1.11.3"
rustls = "0.20.8"
serde = { version = "1.0.228", features = ["derive", "alloc"] }
serde_json = { version = "1.0.145", features = ["alloc"] }
sha2 = "0.10.9"
tempfile = "3.10.1"
thiserror = "1.0.68"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"



[lib]
name = "rules_minidock_tools"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.10.1"
